--- a/new1.html
+++ b/new1.html
@@ -44,11 +44,11 @@
 
         <h3>Contents</h3>
         <ul>
-            <li><a href="#first">First lesson!</a></li>
-            <li><a href="#second">Second lesson!</a></li>
-            <li><a href="#third">Third lesson!</a></li>
-            <li><a href="#fourth">Fourth lesson!</a></li>
-			<li><a href="#fifth">Fifth lesson!</a></li>
+		<li><a href="#first">First lesson!</a></li>
+		<li><a href="#second">Second lesson!</a></li>
+		<li><a href="#third">Third lesson!</a></li>
+		<li><a href="#fourth">Fourth lesson!</a></li>
+		<li><a href="#fifth">Fifth lesson!</a></li>	
         </ul>
         
         <h2 id="first">First lesson</h2>
@@ -90,7 +90,7 @@
         <h6 class="started">Started: yesterday</h6>
 		
 		
-		<h2 id="fifth">Third lesson</h2>
+		<h2 id="fifth">Fifth lesson</h2>
         <p>Created my first website on <em>Github</em> and downloaded it's desktop version.</p>
         <ul>
             <li>Testing out the features</li>
