--- a/index.html
+++ b/index.html
@@ -5,12 +5,12 @@
         <title>Project: Blog</title>
         <style>
             body {
-                background-color: rgb(25, 248, 252);
+                background-color: rgb(125, 48, 152);
                 font-family: serif;
             }
             h1 {
-                background-color: rgb(214, 194, 255);
-                color: rgb(255, 0, 102);
+                background-color: rgb(0, 0, 0);
+                color: rgb(40, 100, 240);
             }
             h2 {
                 background-color: rgb(0, 0, 0);
@@ -36,13 +36,17 @@
             .fun {
                 color: rgb(230, 5, 5);
             }
+			.JS {
+				color: rgb(230, 5, 5);
+			}
+			
         </style>
     </head>
     <body>
         
-        <h1>Sam's blog!</h1>
+        <h1>Welcome to the future!</h1>
 
-        <h3>Contents</h3>
+        <h3>Critical information</h3>
         <ul>
 		<li><a href="#first">First lesson!</a></li>
 		<li><a href="#second">Second lesson!</a></li>
