--- a/index.html
+++ b/index.html
@@ -4,12 +4,16 @@
         <meta charset="utf-8">
         <title>My first website</title>
         <style>
+			html, body {
+			min-height: 100%;
+			}
 			body {
-				
 				background: url("desk.jpg");
 				background-repeat: no-repeat;
+				background-position: 0 0;
+				background-size: cover;
 			}
-          
+			
         </style>
     </head>
     <body>
