--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 			body {
 				background: url("desk.jpg");
 				background-repeat: no-repeat;
-				background-position: 0 0;
+				background-position: 0% 85%;
 				background-size: cover;
 			}
 			
