--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
 				background-size: cover;
 			}
 			#welcome {
+				text-shadow: -2px 0 black, 0 2px black, 2px 0 black, 0 -2px black;
 				font-family: 'Playfair Display', serif;
 				color: rgb(200,120,35);
        			background: transparent\9;
@@ -37,37 +38,65 @@
 				text-align: center;  
 				margin: 5px 2px;  
 				font-size: 30px;  
-				width: 50px;  
+				width: 30px;  
+				border-radius: 12px;
 			}
 			.fa-facebook {  
 				background: #3B5998;  
 				color: white;  
+				transition-duration: 0.4s;
 			}  
+			.fa-facebook:hover {
+				background-color: blue;
+			}
 			.fa-instagram {  
 				background: #125688;  
-				color: white;  
+				color: white; 
+				transition-duration: 0.4s;				
 			}  
+			.fa-instagram:hover {
+				background-color: blue;
+			}
 			.fa-youtube {  
 				background: #bb0000;  
-				color: white;  
+				color: white;
+				transition-duration: 0.4s;
 			}  
+			.fa-youtube:hover {
+				background-color: red;
+			}
 			.new-user {
 				font-family: 'Playfair Display', serif;
 				color: rgb(200,120,35);
 				font-weight: bold;
 				background-color: rgb(150,42,29);
+				border: 2px solid;
+				border-radius: 8px;
 				position: absolute;
 				top:6%;
 				right:7%;
+				transition-duration: 0.4s;
+			}
+			.new-user:hover {
+				background-color: red; /* Green */
+				color: white;
 			}
 			.login {
 				font-family: 'Playfair Display', serif;
 				color: rgb(200,120,35);
 				font-weight: bold;
 				background-color: rgb(15,77,36);
+				border: 2px solid;
+				border-radius: 8px;
 				position: absolute;
 				top:6%;
 				right:2%;
+				transition-duration: 0.4s;
+			}
+			
+			.login:hover {
+				background-color: #4CAF50; /* Green */
+				color: white;
 			}
         </style>
     </head>
