--- a/index.html
+++ b/index.html
@@ -6,8 +6,28 @@
 		<link href="https://fonts.googleapis.com/css2?family=Playfair+Display&display=swap" rel="stylesheet">
 		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">  
         <meta charset="utf-8">
-        <title>My first website</title>
+        <title>Sam's free English lessons</title>
         <style>
+			/* ----------- Non-Retina Screens ----------- */
+			@media screen 
+			  and (min-device-width: 1200px) 
+			  and (max-device-width: 1600px) 
+			  and (-webkit-min-device-pixel-ratio: 1) { 
+			}
+
+			/* ----------- Retina Screens ----------- */
+			@media screen 
+			  and (min-device-width: 1200px) 
+			  and (max-device-width: 1600px) 
+			  and (-webkit-min-device-pixel-ratio: 2)
+			  and (min-resolution: 192dpi) { 
+			}
+			@media screen 
+			  and (device-width: 360px) 
+			  and (device-height: 640px) 
+			  and (-webkit-device-pixel-ratio: 2) {
+
+			}
 			html, body {
 				min-height: 100%;
 			}
