testing 2em on phone

--- a/index.html
+++ b/index.html
@@ -26,6 +26,9 @@
 			  and (device-width: 360px) 
 			  and (device-height: 640px) 
 			  and (-webkit-device-pixel-ratio: 2) {
+				#welcome {
+				
+				}
 
 			}
 			html, body {
@@ -47,6 +50,7 @@
 				position: -webkit-sticky;
 				position: sticky;
 				top: 1%;
+				font-size: 2em;
 			}
 			.social-media {
 				position: absolute;
