--- a/index.html
+++ b/index.html
@@ -49,26 +49,27 @@
 				text-align: center;
 				position: -webkit-sticky;
 				position: sticky;
-				top: 1%;
+				top: 1em;
 				font-size: 2em;
 			}
 			.social-media {
 				position: absolute;
-				right: 10px;
-				bottom: 10px;
+				right: 1em;
+				bottom: 1em;
 			}
 			.fa {  
 				padding: 20px;  
 				text-align: center;  
 				margin: 5px 2px;  
 				font-size: 30px;  
-				width: 30px;  
-				border-radius: 12px;
+				width: 1em;  
+				border-radius: 0.4em;
 			}
 			.fa-facebook {  
 				background: #3B5998;  
 				color: white;  
 				transition-duration: 0.4s;
+				
 			}  
 			.fa-facebook:hover {
 				background-color: blue;
@@ -97,8 +98,8 @@
 				border: 2px solid;
 				border-radius: 8px;
 				position: absolute;
-				top:6%;
-				right:7%;
+				top:2.2em;
+				right: 6em;
 				transition-duration: 0.4s;
 			}
 			.new-user:hover {
@@ -113,8 +114,8 @@
 				border: 2px solid;
 				border-radius: 8px;
 				position: absolute;
-				top:6%;
-				right:2%;
+				top:2.2em;
+				right: 2em;
 				transition-duration: 0.4s;
 			}
 			
