--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 				position: -webkit-sticky;
 				position: sticky;
 				top: -1em;
-				font-size: 1.5em;
+				font-size: 150%;
 			}
 			/* --------------------------Sign up and Login-----------------*/
 			.new-user {
