--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
 					font-family: 'Playfair Display', serif;
 					color: rgb(200,120,35);
 					border-radius: 8px;
-					background:rgba(0,0,0,0.5);
+					background:rgba(0,0,0,0.6);
 					text-align: center;
 					position: fixed;
 					top: -0.6em;
@@ -150,12 +150,14 @@
 					background-color: red;
 				}
 				
+				/*-----------------------------main text---------------------*/
 				.center-text {
+					text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;
 					font-family: 'Playfair Display', serif;
 					color: rgb(200,120,35);
 					border-radius: 8px;
-					background:rgba(0,0,0,0.5);
-					text-align: center;
+					background:rgba(0,0,0,0.7);
+					text-align: left;
 					overflow: auto;
 					height: 33em;
 					margin-top: 3em;
@@ -324,19 +326,22 @@
 					}
 					.fa-facebook {
 						bottom: 7em;
+						right: 2em;
 					}
 					.fa-instagram {
 						bottom: 4em;
+						right: 2em;
 					}
 					.fa-youtube {
 						bottom: 1em;
+						right: 2em;
 					}
 					.center-text {
 						height: 33em;
 						margin-top: 2em;
 						margin-bottom: 0em;
 						margin-left: 2.5em;
-						margin-right: 2.5em;
+						margin-right: 0em;
 					}
 				}
 				
@@ -369,49 +374,73 @@
 				  x.classList.toggle("change");
 				}
 			</script>
-			<p class="center-text">Welcome<br>
-				Welcome<br>
-				Welcome<br>
-				Welcome<br>
-				Welcome<br>
-				Welcome<br>
-				Welcome<br>
-				Welcome<br>
-				Welcome<br>
-				Welcome<br>
-				Welcome<br>
-				Welcome<br>
-				Welcome<br>
-				Welcome<br>
-				Welcome<br>
-				Welcome<br>
-				Welcome<br>
-				Welcome<br>
-				Welcome<br>
-				Welcome<br>
-				Welcome<br>
-				Welcome<br>
-				Welcome<br>
-				Welcome<br>
-				Welcome<br>
-				Welcome<br>
-				Welcome<br>
-				Welcome<br>
-				Welcome<br>
-				Welcome<br>
-				Welcome<br>
-				Welcome<br>
-				Welcome<br>
-				Welcome<br>
-				Welcome<br>
-				Welcome<br>
-				Welcome<br>
-				Welcome<br>
-				Welcome<br>
-				Welcome<br>
-				Welcome<br>
-				Welcome<br>
-				Welcome<br>
-			</p>
+			<div class="center-text">
+				<p STYLE="margin: 0.5em">
+					<strong STYLE="font-size:30px">Seize the day</strong><br>
+					<em STYLE="font-size:20px">Avenged Sevenfold</em><br>
+					<br>
+					Seize the day or die regretting the time you lost<br>
+					It's empty and cold without you here, too many people to ache over<br>
+					<br>
+					I see my vision burn, I feel my memories fade with time<br>
+					But I'm too young to worry<br>
+					These streets we travel on<br>
+					Will undergo our same lost past<br>
+					<br>
+					I found you here, now please just stay for a while<br>
+					I can move on with you around<br>
+					I hand you my mortal life, but will it be forever?<br>
+					I'd do anything for a smile<br>
+					Holding you 'til our time is done<br>
+					We both know the day will come<br>
+					But I don't want to leave you<br>
+					<br>
+					I see my vision burn<br>
+					I feel my memories fade with time<br>
+					But I'm too young to worry<br>
+					A melody, a memory, or just one picture<br>
+					<br>
+					Seize the day or die regretting the time you lost<br>
+					It's empty and cold without you here, too many people to ache over<br>
+					<br>
+					Newborn life replacing all of us<br>
+					Changing this fable we live in<br>
+					No longer needed here so where do we go?<br>
+					Will you take a journey tonight, follow me past the walls of death?<br>
+					But girl, what if there is no eternal life?<br>
+					<br>
+					I see my vision burn<br>
+					I feel my memories fade with time<br>
+					But I'm too young to worry<br>
+					A melody, a memory, or just one picture<br>
+					<br>
+					Seize the day or die regretting the time you lost<br>
+					It's empty and cold without you here, too many people to ache over<br>
+					<br>
+					Trials in life, questions of us existing here<br>
+					Don't wanna die alone without you here<br>
+					Please tell me what we have is real<br>
+					<br>
+					So, what if I never hold you, yeah<br>
+					Or kiss your lips again?<br>
+					Woah, so I never want to leave you<br>
+					And the memories of us to see I beg don't leave me<br>
+					<br>
+					Seize the day or die regretting the time you lost<br>
+					It's empty and cold without you here, too many people to ache over<br>
+					<br>
+					Trials in life, questions of us existing here<br>
+					Don't wanna die alone without you here<br>
+					Please tell me what we have is real<br>
+					<br>
+					Silence you lost me, no chance for one more day<br>
+					Silence you lost me, no chance for one more day<br>
+					I stand here alone<br>
+					Falling away from you, no chance to get back home<br>
+					I stand here alone<br>
+					Falling away from you, no chance to get back home
+				</p>
+			</div>
+			
 		</body>
 	</html>
